# heffal

./: flake.nix  heffal.cabal
app/: Args.hs  Main.hs
app/Args/: Doc.hs  Parser.hs
src/: GeneralLexer.hs  Helper.hs  Main.hs  MarkupLexer.hs  TextLexer.hs  lexer.hs
src/Heffal/: Config.hs  Format.hs  GeneralLexer.hs  Helper.hs  Lexer.hs  MarkupLexer.hs  Parser.hs  TextLexer.hs
src/Heffal/Format/: Cli.hs  Eww.hs  Json.hs
test/: Main.hs
