cabal-version:   3.0
name:            heffal
version:         0.1.0.0
license:         GPL-3.0-only
author:          M3dry
maintainer:      m3dry@tutamail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Heffal.GeneralLexer,
        Heffal.MarkupLexer,
        Heffal.TextLexer
    other-modules:    Heffal.Helper
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test
    build-depends:
        base,
        heffal,
        HUnit,
        test-framework,
        test-framework-hunit

executable heffal
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, heffal
    hs-source-dirs:   app
    default-language: Haskell2010
