cabal-version:   3.0
name:            heffal
version:         0.1.0.0
license:         GPL-3.0-only
author:          M3dry
maintainer:      m3dry@tutamail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Heffal.Lexer,
        Heffal.Parser,
        Heffal.Format.Cli,
        Heffal.Format.Eww
    other-modules:
        Heffal.Helper,
        Heffal.GeneralLexer
    build-depends:
        base,
        mtl
    hs-source-dirs:   src
    default-language: GHC2021

test-suite tests
    import:         warnings
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test
    build-depends:
        base,
        heffal,
        HUnit,
        test-framework,
        test-framework-hunit
    default-language: GHC2021

executable heffal
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, heffal, mtl
    hs-source-dirs:   app
    default-language: GHC2021
